adding bean H2 database

--- a/TodoList/pom.xml
+++ b/TodoList/pom.xml
@@ -63,6 +63,18 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.200</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
