--- a/TodoList/pom.xml
+++ b/TodoList/pom.xml
@@ -99,6 +99,12 @@
       <version>2.10.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+      <version>5.2.5.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
   <build>
