--- a/TodoList/pom.xml
+++ b/TodoList/pom.xml
@@ -105,6 +105,12 @@
       <version>5.2.5.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>2.2.6.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
   <build>
